<resources>
    <string name="app_name">RecipeOne</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="clickToLogin">Click to Login</string>
    <string name="clickToRegister">Click to Register</string>
    <string name="name">Name</string>
</resources>