<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLR1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLR2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLR3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GLR4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
    <TextView
        android:id="@+id/registerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/GLR1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/name_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/GLR2"
        app:layout_constraintTop_toBottomOf="@id/GLR1"
        android:layout_margin="10dp"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/name_edit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/name_register"
        app:layout_constraintStart_toEndOf="@id/name_register"
        android:hint="Enter Your name"
        android:layout_marginLeft="51dp"
        />
    <TextView
        android:id="@+id/email_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@id/GLR2"
        app:layout_constraintTop_toBottomOf="@id/name_register"
        android:layout_margin="10dp"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/email_edit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/email_register"
        app:layout_constraintStart_toEndOf="@id/email_register"
        android:hint="Enter Your email"
        android:layout_marginLeft="55dp"
        />
    <TextView
        android:id="@+id/pass_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toEndOf="@id/GLR2"
        app:layout_constraintTop_toBottomOf="@id/email_register"
        android:layout_margin="10dp"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/pass_edit_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/pass_register"
        app:layout_constraintStart_toEndOf="@id/pass_register"
        android:hint="Enter your password"
        android:layout_marginLeft="20dp"
    android:inputType="textPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/GLR4"
        app:layout_constraintStart_toStartOf="@id/GLR2"
        app:layout_constraintEnd_toStartOf="@id/GLR3"
        android:onClick="registration"/>

    <TextView
        android:id="@+id/loginNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickToLogin"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/GLR2"
        app:layout_constraintEnd_toStartOf="@id/GLR3"
        android:textSize="18sp"
        android:onClick="loginListener"
        />

</androidx.constraintlayout.widget.ConstraintLayout>