<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
<androidx.constraintlayout.widget.Guideline
    android:id="@+id/GL1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.3"
    />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>
    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/GL1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/email_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@id/GL2"
        app:layout_constraintTop_toBottomOf="@id/GL1"
        android:layout_margin="10dp"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/email_edit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/email_login"
        app:layout_constraintStart_toEndOf="@id/email_login"
        android:hint="Enter Your email"
        android:layout_marginLeft="55dp"
        />
    <TextView
        android:id="@+id/pass_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toEndOf="@id/GL2"
        app:layout_constraintTop_toBottomOf="@id/email_login"
        android:layout_margin="10dp"
        android:textSize="18dp"/>
    <EditText
        android:id="@+id/pass_edit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/pass_login"
        app:layout_constraintStart_toEndOf="@id/pass_login"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/GL4"
        app:layout_constraintStart_toStartOf="@id/GL2"
        app:layout_constraintEnd_toStartOf="@id/GL3"
        android:onClick="login"/>

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickToRegister"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_margin="20dp"
        app:layout_constraintStart_toEndOf="@id/GL2"
        app:layout_constraintEnd_toStartOf="@id/GL3"
        android:textSize="18sp"
        android:onClick="registerListener"
        />



</androidx.constraintlayout.widget.ConstraintLayout>